[package]
name = "latinimers"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["staticlib", "dylib"]

[dependencies]
indexmap = "1.9.1"
jni = "0.19.0"
lazy_static = "1.4.0"
levenshtein = "1.0.5"

[build-dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
